# DiscreteOptimizationGPUExamples

./: README.md
LocalSearch/src/: CMakeLists.txt  ls_on_gpu__cc10.sln  ls_on_gpu__cc20.sln
LocalSearch/src/Reference_Solutions/: SimpleRNG.h  reference_solution.h
LocalSearch/src/ls_on_cpu_openmp_1/: ls_example_cpu_openmp_1.cpp  ls_on_cpu_openmp_1.vcxproj  main.cpp
LocalSearch/src/ls_on_cpu_openmp_2/: ls_example_cpu_openmp_2.cpp  ls_on_cpu_openmp_2.vcxproj  main.cpp
LocalSearch/src/ls_on_cpu_sequential/: ls_example_cpu_sequential.cpp  ls_on_cpu_sequential.vcxproj  main.cpp
LocalSearch/src/ls_on_gpu_1/: ls_example_gpu_1.cu  ls_on_gpu_1__cc10.vcxproj  ls_on_gpu_1__cc20.vcxproj  main.cpp
LocalSearch/src/ls_on_gpu_2/: ls_example_gpu_2.cu  ls_on_gpu_2__cc10.vcxproj  ls_on_gpu_2__cc20.vcxproj
LocalSearch/src/ls_on_gpu_3/: ls_example_gpu_3.cu  ls_on_gpu_3__cc10.vcxproj  ls_on_gpu_3__cc20.vcxproj  main.cpp
LocalSearch/src/ls_on_gpu_4/: ls_example_gpu_4.cu  ls_on_gpu_4__cc10.vcxproj  ls_on_gpu_4__cc20.vcxproj  main.cpp
LocalSearch/src/ls_on_gpu_5/: ls_example_gpu_5.cu  ls_on_gpu_5__cc10.vcxproj  ls_on_gpu_5__cc20.vcxproj
LocalSearch/src/ls_on_gpu_6/: ls_example_gpu_6.cu  ls_on_gpu_6__cc10.vcxproj  ls_on_gpu_6__cc20.vcxproj
LocalSearch/src/ls_on_gpu_8/: ls_example_gpu_8.cu  ls_on_gpu_8__cc10.vcxproj  ls_on_gpu_8__cc20.vcxproj  main.cpp
LocalSearch/src/ls_on_gpu_9/: ls_example_gpu_9.cu  ls_on_gpu_9__cc10.vcxproj  ls_on_gpu_9__cc20.vcxproj  main.cpp
LocalSearch/src/ls_on_gpu_filter_1/: ls_example_gpu_filter_1.cu  ls_on_gpu_filter_1__cc10.vcxproj  (+1 more)
(+14 files in other folders)
